coisa pra carai

--- a/site/Editors/carrinho2.html
+++ b/site/Editors/carrinho2.html
@@ -24,7 +24,7 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="Login.html">Login</a></li>
+                <li><a href="login2.html">Login</a></li>
                 <li><a href="carrinho.html"><i class="fa-solid fa-cart-shopping" id="cart-icon">0</i></a></li>
            
                 <!-- carrinho  -->  
