--- a/site/Editors/carrinho.html
+++ b/site/Editors/carrinho.html
@@ -23,7 +23,7 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contado.html">Contato</a></li>
-                <li><a href="Login.html">Login</a></li>
+                <li><a href="login2.html">Login</a></li>
                 <li><a class="active" href="carrinho.html"><i class="fa-solid fa-cart-shopping">0</i></a></li>
             </ul>
         </div>
