--- a/site/Editors/index.html
+++ b/site/Editors/index.html
@@ -24,8 +24,8 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="sobre.html" >Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="Login.html">Login</a></li>
-                <li><a <!--href="carrinho.html"--></a><i class="fa-solid fa-cart-shopping" id="cart-icon">0</i></a></li>
+                <li><a href="login2.html">Login</a></li>
+                <li><a></a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
             
             <!-- carrinho -->  
            
@@ -41,12 +41,30 @@
                          </div>
                          <!-- remover do carrinho  -->
                          <i class="fa-solid fa-trash cart-remove"></i>
+
+                         <img src="../assets/Categoria Anime/moleton/moletom 1.png" alt="" class="carrinho-img"> 
+                         <div class="detail-box">
+                             <div class="carrinho-product-title">Moletom do Killua Zoldyck</div>
+                             <div class="carrinho-price"><R145></R145></div>
+                             <input type="number" value="1" class="carrinho-quantity">
+                         </div>
+                         <!-- remover do carrinho  -->
+                         <i class="fa-solid fa-trash cart-remove"></i>
+
+                         <img src="../assets/Categoria Anime/calça/calça 1.png" alt="" class="carrinho-img"> 
+                         <div class="detail-box">
+                             <div class="carrinho-product-title">Calça jeans do Katsuki Bakugo</div>
+                             <div class="carrinho-price"><R145></R145></div>
+                             <input type="number" value="1" class="carrinho-quantity">
+                         </div>
+                         <!-- remover do carrinho  -->
+                         <i class="fa-solid fa-trash cart-remove"></i>
                      </div>
                  </div>
                  <!-- Total  -->
                      <div class="total">
                          <div class="total-title">Total:</div>
-                         <div class="total-price">$0</div> 
+                         <div class="total-price">$199</div> 
                      </div>
                      <!-- botao comprar  -->
                      <button type="button" class="normal-cart">Comprar</button>
@@ -102,7 +120,7 @@
     <!-- produtos -->
    
     <section id="product1" class="section-p1">
-        <h2>Produtos em destaque</h2>
+        <h2 class="product-title">Produtos em destaque</h2>
            <p>Do mundo otaku em roupas</p>
         <div class="pro-container">
             <div class="pro" onclick="window.location.href='sproduct.html'">
@@ -117,12 +135,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>                                            
                     </div>
-                    <h4>R$45</h4>
+                    <h4 class="price">R$45</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart cart add-cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct-2.html'">
-                <img src="../assets/Categoria Anime/moleton/moletom 2.png" alt="">
+                <img src="../assets/Categoria Anime/moleton/moletom 2.png" alt="" class="product-img">
                 <div class="desc">
                     <span>Space Shop</span>
                     <h5>Moletom do Katsuki Bakugou</h5>
