--- a/site/Editors/login.html
+++ b/site/Editors/login.html
@@ -14,18 +14,64 @@
 
     <!-- cabeçalho  -->
 
-    <section id="header">
+<section id="header">
         <div class="logo">
         <a href="index.html"><img src="../assets/logo.png" class="logo" alt="logo"></a>
         </div>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="Login.html">Login</a></li>
-                <li><a href="carrinho.html"><i class="fa-solid fa-cart-shopping">0</i></a></li>
+                <li><a class="active" href="Login.html">Login</a></li>
+                <li><a></a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
+
+            <!-- carrinho -->  
+           
+            <div class="carrinho">
+                <h2 class="carrinho-title">Seu Carrinho</h2>
+                 <div class="carrinho-content">
+                     <div class="carrinho-box">
+                         <img src="../assets/Categoria Anime/camiseta/camiseta 1.png" alt="" class="carrinho-img"> 
+                         <div class="detail-box">
+                             <div class="carrinho-product-title">Camiseta do Yuji Tadori</div>
+                             <div class="carrinho-price"><R145></R145></div>
+                             <input type="number" value="1" class="carrinho-quantity">
+                         </div>
+                         <!-- remover do carrinho  -->
+                         <i class="fa-solid fa-trash cart-remove"></i>
+
+                         <img src="../assets/Categoria Anime/moleton/moletom 1.png" alt="" class="carrinho-img"> 
+                         <div class="detail-box">
+                             <div class="carrinho-product-title">Moletom do Killua Zoldyck</div>
+                             <div class="carrinho-price"><R145></R145></div>
+                             <input type="number" value="1" class="carrinho-quantity">
+                         </div>
+                         <!-- remover do carrinho  -->
+                         <i class="fa-solid fa-trash cart-remove"></i>
+
+                         <img src="../assets/Categoria Anime/calça/calça 1.png" alt="" class="carrinho-img"> 
+                         <div class="detail-box">
+                             <div class="carrinho-product-title">Calça jeans do Katsuki Bakugo</div>
+                             <div class="carrinho-price"><R145></R145></div>
+                             <input type="number" value="1" class="carrinho-quantity">
+                         </div>
+                         <!-- remover do carrinho  -->
+                         <i class="fa-solid fa-trash cart-remove"></i>
+                     </div>
+                 </div>
+                 <!-- Total  -->
+                     <div class="total">
+                         <div class="total-title">Total:</div>
+                         <div class="total-price">$199</div> 
+                     </div>
+                     <!-- botao comprar  -->
+                     <button type="button" class="normal-cart">Comprar</button>
+                     <!-- Fechar carrinho  -->
+                     <i class="fa-solid fa-x" id="close-cart"></i>
+
+
             </div>
             </ul>
         </div>
@@ -37,27 +83,27 @@
                 <button id="bntSignin">Login</button>
                 <button id="bntSignup">Cadastro</button>
             </div>
-            <form id="signin">
-                <input type="text" placeholder="Email" required />
+            <form class="form-login" id="signin">
+                <input class="input-login" type="text" placeholder="Email" required />
                 <i class="fa-solid fa-envelope lg"></i>
-                <input type="text" placeholder="Senha" required />
+                <input class="input-login" type="text" placeholder="Senha" required />
                 <i class="fa-solid fa-lock lg"></i>
                 <div class="divCheck">
-                    <input type="checkbox" />
+                    <input class="input-login" type="checkbox" />
                     <span>Lembre da senha</span>
                 </div>
                 <button type="submit" class="normal">Logar</button>
             </form>
 
-            <form id="signup">
-                <input type="text" placeholder="Email" required>
+            <form class="form-login" id="signup">
+                <input class="input-login" type="text" placeholder="Email" required>
                 <i class="fa-solid fa-envelope lg"></i>
-                <input type="text" placeholder="Senha" required>
+                <input class="input-login" type="text" placeholder="Senha" required>
                 <i class="fa-solid fa-lock lg"></i>
-                <input type="text" placeholder="Senha" required>
+                <input class="input-login" type="text" placeholder="Senha" required>
                 <i class="fa-solid fa-lock lg2"></i>
                 <div class="divCheck">
-                    <input type="checkbox" />
+                    <input class="input-login" type="checkbox" />
                     <span>Termos</span>
                 </div>
                 <button type="submit" class="normal">Logar</button>
