--- a/site/Editors/shop-moletom.html
+++ b/site/Editors/shop-moletom.html
@@ -22,7 +22,7 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="Login.html">Login</a></li>
+                <li><a href="login2.html">Login</a></li>
                 <li><a href="carrinho.html"><i class="fa-solid fa-cart-shopping">0</i></a></li>
             </ul>
         </div>
