uma carralhada de coisa ai meo

--- a/site/Editors/login2.html
+++ b/site/Editors/login2.html
@@ -26,6 +26,7 @@
             <li><a href="sobre.html" >Sobre</a></li>
             <li><a href="contato.html">Contato</a></li>
             <li><a class="active" href="login2.html">Login</a></li>
+            <li> <a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
             <li><a></a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
 
 
