--- a/site/Editors/shop-moletom.html
+++ b/site/Editors/shop-moletom.html
@@ -22,8 +22,8 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login2.html">Login</a></li>
-                <li><a href="carrinho.html"><i class="fa-solid fa-cart-shopping">0</i></a></li>
+                <li> <a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
+                <li><a></a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>  
             </ul>
         </div>
     </section>
