--- a/site/Editors/shop.html
+++ b/site/Editors/shop.html
@@ -25,6 +25,7 @@
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="login2.html">Login</a></li>
+                <li> <a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
                 <li><a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
 
             <!-- carrinho -->  
