tela de login e tela de registro

--- a/site/Editors/sproduct-10.html
+++ b/site/Editors/sproduct-10.html
@@ -22,7 +22,7 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login2.html">Login</a></li>
+                <li><a href="login3.html">Login</a></li>
                 <li> <a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
                 <li><a></a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
             
@@ -85,7 +85,7 @@
         </div>
         <div class="single-pro-details">
             <h6>Home/Camiseta</h6>
-            <h4>Camiseta do Groot</h4>
+            <h4 class="product-title">Camiseta do Groot</h4>
             <h2>R$45</h2>
             <select>
                 <option>Tamanho</option>
@@ -96,7 +96,7 @@
                 <option>XG</option>
             </select>
             <input type="number" value="1">
-            <button> <strong>Comprar</strong></button>
+            <button class="normal btncart"> <strong>Comprar</strong></button>
             <h4>Detalhes do Produto</h4>
             <span>Camiseta preta manga curta, com estampa do Groot de Guardioes das Galaxias - Marvel. 
                   Material 100% algodão.
