--- a/site/Editors/sproduct-16.html
+++ b/site/Editors/sproduct-16.html
@@ -22,7 +22,7 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login2.html">Login</a></li>
+                <li><a href="login3.html">Login</a></li>
                 <li> <a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
                 <li><a></a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
             
@@ -35,24 +35,6 @@
                          <img src="../assets/Categoria Anime/camiseta/camiseta 1.png" alt="" class="carrinho-img"> 
                          <div class="detail-box">
                              <div class="carrinho-product-title">Camiseta do Yuji Tadori</div>
-                             <div class="carrinho-price"><R145></R145></div>
-                             <input type="number" value="1" class="carrinho-quantity">
-                         </div>
-                         <!-- remover do carrinho  -->
-                         <i class="fa-solid fa-trash cart-remove"></i>
-
-                         <img src="../assets/Categoria Anime/moleton/moletom 1.png" alt="" class="carrinho-img"> 
-                         <div class="detail-box">
-                             <div class="carrinho-product-title">Moletom do Killua Zoldyck</div>
-                             <div class="carrinho-price"><R145></R145></div>
-                             <input type="number" value="1" class="carrinho-quantity">
-                         </div>
-                         <!-- remover do carrinho  -->
-                         <i class="fa-solid fa-trash cart-remove"></i>
-
-                         <img src="../assets/Categoria Anime/calça/calça 1.png" alt="" class="carrinho-img"> 
-                         <div class="detail-box">
-                             <div class="carrinho-product-title">Calça jeans do Katsuki Bakugo</div>
                              <div class="carrinho-price"><R145></R145></div>
                              <input type="number" value="1" class="carrinho-quantity">
                          </div>
@@ -85,13 +67,13 @@
         </div>
         <div class="single-pro-details">
             <h6>Home/Acessorios</h6>
-            <h4>Bolsa do Capitão America</h4>
+            <h4 class="product-title">Bolsa do Capitão America</h4>
             <h2>R$300</h2>
             <select>
                 <option>Tamanho Único</option>
             </select>
             <input type="number" value="1">
-            <button> <strong>Comprar</strong></button>
+            <button class="normal btn-add-cart"><strong>Comprar</strong></button>
             <h4>Detalhes do Produto</h4>
             <span>Bolsa de cintura, com alça, do Capitão America - Marvel.
             </span>
