--- a/site/Editors/profile.html
+++ b/site/Editors/profile.html
@@ -25,7 +25,7 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="sobre.html" >Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login2.html">Login</a></li>
+                <li><a href="login3.html">Login</a></li>
 				<li><a class="active" href="profile.html"><i class="fa-solid fa-user"></i></a></li>
                 <li><a></a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
             
@@ -102,10 +102,7 @@
 							<i class="fa fa-key text-center mr-1"></i> 
 							Senhas
 						</a>
-						<a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
-							<i class="fa fa-user text-center mr-1"></i> 
-							Segurança
-						</a>
+
 					</div>
 				</div>
 				<div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
@@ -114,33 +111,15 @@
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-								  	<label>Primeiro Nome</label>
+								  	<label>Nome</label>
 								  	<input type="text" class="form-control" value="">
 								</div>
 							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Sobrenome</label>
-								  	<input type="text" class="form-control" value="">
-								</div>
-							</div>
+
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Email</label>
 								  	<input type="text" class="form-control" value="">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Numero de Telefone</label>
-								  	<input type="text" class="form-control" value="">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-								  	<label>Bio</label>
-									<textarea class="form-control" rows="4"></textarea>
-								
 								</div>
 							</div>
 						</div>
@@ -168,37 +147,8 @@
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
-								  	<label>Confirme sua Senha</label>
+								  	<label>Confirme a Senha</label>
 								  	<input type="password" class="form-control">
-								</div>
-							</div>
-						</div>
-						<div>
-							<button class="profile-button">Atualizar</button>
-							<button class="profile-button-light">Cancelar</button>
-						</div>
-					</div>
-					<div class="tab-pane fade" id="security" role="tabpanel" aria-labelledby="security-tab">
-						<h3 class="mb-4">Configurções de Segurança</h3>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Login</label>
-								  	<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Autenticação de dois fatores</label>
-								  	<input type="text" class="form-control">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<div class="form-check">
-										<input class="form-check-input" type="checkbox" value="" id="recovery">
-										<label class="form-check-label" for="recovery">Recuperação</label>
-									</div>
 								</div>
 							</div>
 						</div>
