--- a/site/Editors/shop.html
+++ b/site/Editors/shop.html
@@ -24,7 +24,7 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login2.html">Login</a></li>
+                <li><a href="login3.html">Login</a></li>
                 <li> <a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
                 <li><a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
 
@@ -37,35 +37,18 @@
                          <img src="../assets/Categoria Anime/camiseta/camiseta 1.png" alt="" class="carrinho-img"> 
                          <div class="detail-box">
                              <div class="carrinho-product-title">Camiseta do Yuji Tadori</div>
-                             <div class="carrinho-price"><R145></R145></div>
+                             <div class="carrinho-price"><R145>$45</R145></div>
                              <input type="number" value="1" class="carrinho-quantity">
                          </div>
                          <!-- remover do carrinho  -->
                          <i class="fa-solid fa-trash cart-remove"></i>
 
-                         <img src="../assets/Categoria Anime/moleton/moletom 1.png" alt="" class="carrinho-img"> 
-                         <div class="detail-box">
-                             <div class="carrinho-product-title">Moletom do Killua Zoldyck</div>
-                             <div class="carrinho-price"><R145></R145></div>
-                             <input type="number" value="1" class="carrinho-quantity">
-                         </div>
-                         <!-- remover do carrinho  -->
-                         <i class="fa-solid fa-trash cart-remove"></i>
-
-                         <img src="../assets/Categoria Anime/calça/calça 1.png" alt="" class="carrinho-img"> 
-                         <div class="detail-box">
-                             <div class="carrinho-product-title">Calça jeans do Katsuki Bakugo</div>
-                             <div class="carrinho-price"><R145></R145></div>
-                             <input type="number" value="1" class="carrinho-quantity">
-                         </div>
-                         <!-- remover do carrinho  -->
-                         <i class="fa-solid fa-trash cart-remove"></i>
                      </div>
                  </div>
                  <!-- Total  -->
                      <div class="total">
                          <div class="total-title">Total:</div>
-                         <div class="total-price">$199</div> 
+                         <div class="total-price">$</div> 
                      </div>
                      <!-- botao comprar  -->
                      <button type="button" class="normal-cart">Comprar</button>
@@ -108,13 +91,13 @@
                     </div>
                     <h4>R$45</h4>
                 </div>
-                <a><i class="fa-solid fa-cart-shopping cart cart"></i></a>
+                <a><i class="fa-solid fa-cart-shopping cart cart cart-shop" id="cart-shop"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct-2.html'">
                 <img src="../assets/Categoria Anime/moleton/moletom 2.png" alt="">
                 <div class="desc">
                     <span>Space Shop</span>
-                    <h5>Moletom do Katsuki Bakugou</h5>
+                    <h5 class="titulo-produto">Moletom do Katsuki Bakugou</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -122,7 +105,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>                                            
                     </div>
-                    <h4>R$70</h4>
+                    <h4 class="Product-price">R$70</h4>
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping cart cart"></i></a>
             </div>
