--- a/site/Editors/sproduct-11.html
+++ b/site/Editors/sproduct-11.html
@@ -22,7 +22,7 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login2.html">Login</a></li>
+                <li><a href="login3.html">Login</a></li>
                 <li> <a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
                 <li><a></a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
             
@@ -85,7 +85,7 @@
         </div>
         <div class="single-pro-details">
             <h6>Home/Acessorios</h6>
-            <h4>Tenis Jordan 1 high do Thor</h4>
+            <h4 class="product-title">Tenis Jordan 1 high do Thor</h4>
             <h2>R$1200</h2>
             <select>
                 <option>Tamanho</option>
@@ -98,7 +98,7 @@
                 <option>41</option>
             </select>
             <input type="number" value="1">
-            <button> <strong>Comprar</strong></button>
+            <button class="normal btncart"> <strong>Comprar</strong></button>
             <h4>Detalhes do Produto</h4>
             <span>Tenis Jordan 1 High com colab Thor da Marvel. Original.
             </span>
