--- a/site/Editors/sproduct-2.html
+++ b/site/Editors/sproduct-2.html
@@ -23,7 +23,7 @@
                 <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login2.html">Login</a></li>
+                <li><a href="login3.html">Login</a></li>
                 <li> <a href="profile.html"><i class="fa-solid fa-user"></i></a></li>
                 <li><a></a><i class="fa-solid fa-cart-shopping" id="cart-icon"></i></a></li>
             
@@ -97,7 +97,7 @@
                 <option>XG</option>
             </select>
             <input type="number" value="1">
-            <button> <strong>Comprar</strong></button>
+            <button class="normal btncart"><strong>Comprar</strong></button>
             <h4>Detalhes do Produto</h4>
             <span>Moletom preto, com bolso canguro, capuz.Material 100% algodão,
                   com estampa do Katsuki Bakugou de Boku no Hero Academia.
